Where "NUMBER" is the bug number.

There are always more changes than listed here, these are just the
highlights. The full CVS log is available at www.xchat.org/cvslog/

----------------------------------------------------------------------
 2.6.x - DD/MMM/2006
----------------------------------------------------------------------

 - Updated translations (be, fi, it, ja).
 - D-Bus stuff <expand comment> (Claessens Xavier).
 - Python: Fixed "restricted mode" errors on win32 [1512076].
 - Special-cased BRASnet for nickserv.
 - Fixed using the /MENU args -p and -e at the same time.
 - Fixed /reconnect and auto-reconnect issue [1525383].
 - Plugin API:
   * Added fields: lag, queue to the "channels" list.
   * Added fields: sizehigh to the "dcc" list.
 - Handle gracefully plugins that try to execute commands with invalid
   UTF-8.
 - Fixed: [1544960] quitting via tabs behaves bad on bncs.
 - Fixed: [1551620] --version flag needs display.
 - 
 - 
 - 
 - Perl (Lian Wan Situ)
  * Changed Xchat::print and Xchat::command to return false if they are
    called with either no arguments or undef
  * Changed Xchat::user_info so that it works even if the nick parameter
    contains color codes

----------------------------------------------------------------------
 2.6.6 - 18/Jul/2006
----------------------------------------------------------------------

 - Updated translations (es, fr, sr).
 - Fixed connecting to a IRC server via proxy (bug in 2.6.4 only).
 - Fixed the invisible cursor color when using GTKSpell and a black
   input box (when "Use the text box font & colors" is ON).
 - Allow loading a cert/privatekey file from ~/.xchat2/<NetWorkName>.pem
 - Improved the fallback routine when you receive non-UTF8 messages. It
   can now handle CP1252 from mIRC users and the ISO-8859-15 Euro symbol.
 - Added CHANOPT command for setting channel specific options such as showing
   of joins and part, beep on message and color paste (Lian Wan Situ).